--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Europe -- Description and travel'
 - !lcc 'D'
+- GITenberg
 title: "Young Americans Abroad\r\nVacation in Europe: Travels in England, France,\
   \ Holland, Belgium, Prussia and Switzerland"
 url: http://www.gutenberg.org/ebooks/20625
